question-answering: Use a set of public images by default
Use a set of public docker images by default, since new clusters do
not have the permissions to pull images from the gcr.io registry.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/E2E-Demos/Question-Answering/02.serve-vectorstore.ipynb
+++ b/E2E-Demos/Question-Answering/02.serve-vectorstore.ipynb
@@ -137,8 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor_image = (input(\"Enter the name of the predictor image (default: gcr.io/mapr-252711/ezua-demos/vectorstore:v0.1.0): \")\n",
-    "                   or \"gcr.io/mapr-252711/ezua-demos/vectorstore:v0.1.0\")"
+    "predictor_image = (input(\"Enter the name of the predictor image (default: dpoulopoulos/vectorstore:b98a87f): \")\n",
+    "                   or \"dpoulopoulos/vectorstore:b98a87f\")"
    ]
   },
   {
