--- a/E2E-Demos/Question-Answering/04.serve-llm.ipynb
+++ b/E2E-Demos/Question-Answering/04.serve-llm.ipynb
@@ -89,10 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PREDICTOR_IMAGE = (input(\"Enter the name of the predictor image (default: gcr.io/mapr-252711/ezua-demos/llm-predictor:v0.1.0): \")\n",
-    "                   or \"gcr.io/mapr-252711/ezua-demos/llm-predictor:v0.1.0\")\n",
-    "TRANSFORMER_IMAGE = (input(\"Enter the name of the transformer image (default: gcr.io/mapr-252711/ezua-demos/llm-transformer:v0.1.0): \")\n",
-    "                     or \"gcr.io/mapr-252711/ezua-demos/llm-transformer:v0.1.0\")"
+    "PREDICTOR_IMAGE = (input(\"Enter the name of the predictor image (default: dpoulopoulos/llm-predictor:b98a87f): \")\n",
+    "                   or \"dpoulopoulos/llm-predictor:b98a87f\")\n",
+    "TRANSFORMER_IMAGE = (input(\"Enter the name of the transformer image (default: dpoulopoulos/llm-transformer:b98a87f): \")\n",
+    "                     or \"dpoulopoulos/llm-transformer:b98a87f\")"
    ]
   },
   {
