Updated the dataset

--- a/Data Validation/Whylogs Profiling.ipynb
+++ b/Data Validation/Whylogs Profiling.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "35276080-befc-4c05-9793-bf422c1b7447",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "da19979d-832d-4090-92b0-9e2c5bd1dfc3",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "d0e4b205-bd2a-4c4a-a087-176fcec920f7",
    "metadata": {},
    "outputs": [
@@ -135,28 +135,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-RECORD 0--------------------------------------\n",
-      " name                   | Very Nice 2Br in ... \n",
-      " description            | Discounts for lon... \n",
-      " listing_url            | https://www.airbn... \n",
-      " last_review            | 2020-12-26           \n",
-      " number_of_reviews_ltm  | 13                   \n",
-      " number_of_reviews_l30d | 0                    \n",
-      " id                     | 17878                \n",
-      " latitude               | -22.96592            \n",
-      " longitude              | -43.17896            \n",
-      " availability_365       | 286                  \n",
-      " bedrooms               | 2.0                  \n",
-      " bathrooms              | null                 \n",
-      " reviews_per_month      | 2.01                 \n",
-      " room_type              | Entire home/apt      \n",
+      "-RECORD 0----------------------\n",
+      " fixed acidity        | 7.4    \n",
+      " volatile acidity     | 0.7    \n",
+      " citric acid          | 0      \n",
+      " residual sugar       | 1.9    \n",
+      " chlorides            | 0.076  \n",
+      " free sulfur dioxide  | 11     \n",
+      " total sulfur dioxide | 34     \n",
+      " density              | 0.9978 \n",
+      " pH                   | 3.51   \n",
+      " sulphates            | 0.56   \n",
+      " alcohol              | 9.4    \n",
+      " quality              | 5      \n",
       "only showing top 1 row"
      ]
     }
    ],
    "source": [
     "from pyspark import SparkFiles\n",
-    "spark_dataframe= spark.read.format('parquet').load(\"file:///mounts/shared-volume/shared/airbnb_listings.parquet\")\n",
+    "spark_dataframe= spark.read.format('csv').option(\"header\",\"true\").option(\"delimiter\", \";\").load(\"file:///mounts/shared-volume/shared/winequality-red.csv\")\n",
     "\n",
     "spark_dataframe.show(n=1, vertical=True)\n"
    ]
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "f9f5a8c3-f158-4401-aea0-b0c70a4efa50",
    "metadata": {},
    "outputs": [
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "0df41833-77e9-487a-9069-d5b905381c01",
    "metadata": {},
    "outputs": [
@@ -236,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alcohol': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f66142606d0>, 'chlorides': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d982310>, 'citric acid': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d5713d0>, 'density': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d4a6640>, 'fixed acidity': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d483160>, 'free sulfur dioxide': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d4a0c10>, 'pH': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f66141cf850>, 'quality': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d8d0100>, 'residual sugar': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f66142001c0>, 'sulphates': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d8e9130>, 'total sulfur dioxide': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f6614180640>, 'volatile acidity': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f660d8dde50>}\n",
+      "{'alcohol': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f93467521c0>, 'chlorides': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f934661d760>, 'citric acid': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f9347b822b0>, 'density': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f93465f84f0>, 'fixed acidity': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f9346760df0>, 'free sulfur dioxide': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f9346729130>, 'pH': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f934672dcd0>, 'quality': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f93467348b0>, 'residual sugar': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f934659e490>, 'sulphates': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f9346586fd0>, 'total sulfur dioxide': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f934657cc10>, 'volatile acidity': <whylogs.core.view.column_profile_view.ColumnProfileView object at 0x7f93465ab7f0>}\n",
       "dict_keys(['alcohol', 'chlorides', 'citric acid', 'density', 'fixed acidity', 'free sulfur dioxide', 'pH', 'quality', 'residual sugar', 'sulphates', 'total sulfur dioxide', 'volatile acidity'])"
      ]
     }
@@ -258,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "3e2b2a9a-bd0f-4a43-9a79-5d297941b158",
    "metadata": {},
    "outputs": [
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "25399cbe-4c76-4c4a-9a8b-2b712d1d0887",
    "metadata": {},
    "outputs": [
@@ -322,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9967466791744841"
+      "0.0"
      ]
     }
    ],
@@ -342,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "d063b9fe-db4d-4107-af2c-c1c2b8503ddc",
    "metadata": {},
    "outputs": [
@@ -389,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "bb8024e3-8142-479c-a49e-3ebc564cbcb2",
    "metadata": {},
    "outputs": [
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "2c41f63f-4c12-491a-83ae-d308706bb6a7",
    "metadata": {},
    "outputs": [
@@ -438,15 +436,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               cardinality/est  cardinality/lower_1  ...  ints/max  ints/min\n",
-      "column                                               ...                    \n",
-      "alcohol              65.000010            65.000000  ...       NaN       NaN\n",
-      "chlorides           153.000058           153.000000  ...       NaN       NaN\n",
-      "citric acid          80.000016            80.000000  ...       NaN       NaN\n",
-      "density             439.557368           433.943761  ...       NaN       NaN\n",
-      "fixed acidity        96.000023            96.000000  ...       NaN       NaN\n",
+      "               cardinality/est  cardinality/lower_1  ...  types/string  types/tensor\n",
+      "column                                               ...                            \n",
+      "alcohol              65.000010            65.000000  ...          1599             0\n",
+      "chlorides           153.000058           153.000000  ...          1599             0\n",
+      "citric acid          80.000016            80.000000  ...          1599             0\n",
+      "density             438.484250           432.884348  ...          1599             0\n",
+      "fixed acidity        96.000023            96.000000  ...          1599             0\n",
       "\n",
-      "[5 rows x 31 columns]"
+      "[5 rows x 29 columns]"
      ]
     }
    ],
