Saved the visualization html

--- a/Model-Monitoring/Data Validation.ipynb
+++ b/Model-Monitoring/Data Validation.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "MagicsControllerWidget(children=(Tab(children=(ManageSessionWidget(children=(HTML(value='<br/>'), HTML(value='…"
+       "MagicsControllerWidget(children=(Tab(children=(ManageSessionWidget(children=(HTML(value='<br/>'), HBox(childre…"
       ]
      },
      "metadata": {},
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {
     "id": "yWhIyVdmEMNJ"
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {
     "id": "dKxGJ8elEMNL",
     "outputId": "3ec26cae-8035-42ed-ba96-52e8aea74508"
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {
     "id": "Nw0DbogyEMNM",
     "outputId": "d8779448-4d53-4d63-b218-7f01eac1ed84"
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {
     "id": "_409gnFJEMNM",
     "outputId": "aa2d912e-5c1e-4700-9338-a9b5f78b577f"
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {
     "id": "Q4O5WpVPEMNN"
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {
     "id": "C9P8TBx6EMNN"
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {
     "id": "qRm46DHWEMNO",
     "outputId": "539700f3-73e8-44d1-a577-ad01769f5f28"
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {
     "id": "t369rIm8EMNP",
     "outputId": "3197f9b7-bf8e-48c3-fe4f-696fa514652c"
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {
     "id": "tHOLuyXNEMNQ",
     "outputId": "796d08f1-9784-4d93-9efc-e5be4e916809"
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {
     "id": "6rnfh4wBEMNR",
     "outputId": "413add67-9400-44df-b7b2-7c5b6fddc0b5"
@@ -556,8 +556,7 @@
    "source": [
     "from whylogs.viz import NotebookProfileVisualizer\n",
     "visualization = NotebookProfileVisualizer()\n",
-    "visualization.constraints_report(constraints, cell_height=300)\n",
-    "\n"
+    "visualization.constraints_report(constraints, cell_height=300)"
    ]
   },
   {
@@ -567,6 +566,53 @@
    },
    "source": [
     "Looks like we have some missing values for `last_review`. Other than that, the data looks good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error was encountered:\n",
+      "'module' object is not callable\n",
+      "Traceback (most recent call last):\n",
+      "TypeError: 'module' object is not callable\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "os.getcwd() \n",
+    "visualization.set_profiles(target_profile_view=dataset_profile_view)\n",
+    "visualization.write( rendered_html=visualization.profile_summary(), html_file_name=\"/mounts/shared-volume/shared/model_monitoring/data_validation\", )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "You can now load the html from the EZAU platform."
    ]
   }
  ],
