--- a/demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/question-answering/02.serve-vectorstore.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "# Creating an Inference Service using MLFlow and KServe\n",
     "\n",
-    "Welcome to the second part of our tutorial on building a question-answering application over a corpus of private documents using Large Language Models (LLMs). In the previous Notebook, you focused on embedding the documents into a high-dimensional latent space and storing these embeddings in a Vector Store using the Chroma database interface provided by LangChain.\n",
+    "Welcome to part two of the tutorial on building a question-answering application over a private document corpus with\n",
+    "Large Language Models (LLMs). In the previous Notebook, you transformed the documents into a high-dimensional latent\n",
+    "space and saved these embeddings in a Vector Store using the Chroma database interface from LangChain.\n",
     "\n",
     "<figure>\n",
     "  <img src=\"images/inference-service.jpg\" alt=\"isvc\" style=\"width:100%\">\n",
@@ -18,11 +20,19 @@
     "  </figcaption>\n",
     "</figure>\n",
     "\n",
-    "In this Notebook, you will be taking the next step in this journey. You will use MLFlow to log the Chroma DB files as artifacts of an experiment. After logging the artifacts, you will then create an Inference Service that retrieves these artifacts and uses them to provide context to user queries. For this purpose, you'll be using KServe, a Kubernetes-based platform that provides a serverless framework for serving machine learning models at scale.\n",
+    "In this Notebook, you delve deeper. You use MLFlow to log the Chroma DB files as experiment artifacts. Once logged, you\n",
+    "then set up an Inference Service that fetches these artifacts and leverages them to provide context to user inquiries.\n",
+    "For this task, you work with KServe, a Kubernetes-centric platform that offers a serverless blueprint for scaling\n",
+    "Machine Learning models seamlessly.\n",
     "\n",
-    "It's important to note that since KServe does not support serving Chroma DB files out-of-the-box, you will be using a custom predictor component. This means that you'll need to create a Docker image first, which can then be deployed as our Inference Service. This process allows for a high degree of customization, enabling you to fine-tune your service to your specific needs. You can find the code, as well as the Dockerfile for the custom predictor inside the `vectorstore` directory of this project. However, to save time, you can use the one we have pre-built for you: `gcr.io/mapr-252711/ezua-demos/vectorstore:v0.1.0`.\n",
+    "A crucial point to remember: KServe doesn't support Chroma DB files natively. Because of this, you integrate a custom\n",
+    "predictor component. This involves creating a Docker image, which then serves as your Inference Service. This approach\n",
+    "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
+    "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
+    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore:v0.1.0`.\n",
     "\n",
-    "Once you're ready, this Notebook will guide you through the necessary steps for creating a scalable Vector Store service. First, let's import the libraries you'll need:"
+    "Once you're ready, this Notebook guides you through the necessary steps for creating a scalable Vector Store service.\n",
+    "First, let's import the libraries you'll need:"
    ]
   },
   {
@@ -36,13 +46,9 @@
    "source": [
     "import os\n",
     "import base64\n",
-    "import logging\n",
-    "import warnings\n",
     "import subprocess\n",
     "\n",
-    "import mlflow\n",
-    "\n",
-    "warnings.filterwarnings('ignore')"
+    "import mlflow"
    ]
   },
   {
@@ -54,8 +60,6 @@
    },
    "outputs": [],
    "source": [
-    "import base64\n",
-    "\n",
     "def encode_base64(message: str):\n",
     "    encoded_bytes = base64.b64encode(message.encode('ASCII'))\n",
     "    return encoded_bytes.decode('ASCII')"
@@ -70,7 +74,10 @@
    "source": [
     "# Logging the Vector Store as an Artifact\n",
     "\n",
-    "To kick-off this process, you need to create a new experiment (or re-use and existing one) and log the Chroma DB files as an artifact of this experiment. In the end, you'll need to retrieve the URI pointing to the location of this artifact and pass it to the custom predictor component. This way, the custom predictor component will know hot to retrieve the artifact and serve it."
+    "To begin, you create a new experiment or utilize an existing one and log the Chroma DB files as an artifact of this\n",
+    "experiment. Ultimately, you retrieve the URI that points to this artifact's location and provide it to the custom\n",
+    "predictor component. By doing this, the custom predictor component understands how to fetch the artifact and serve it\n",
+    "effectively."
    ]
   },
   {
@@ -120,14 +127,22 @@
    "source": [
     "# Creating and Submitting the Inference Service\n",
     "\n",
-    "In the final section of this Notebook, you will create and submit an Inference Service using a YAML template and a Python subprocess. The steps in this section include:\n",
+    "In the final segment of this Notebook, you create and submit an Inference Service via a YAML template and a Python\n",
+    "subprocess. This process unfolds as follows:\n",
     "\n",
-    "1. Creating the YAML Template: You will create a YAML file that defines the specifications of our Inference Service. This includes details like the name of the service, the Docker image to use, and other configuration settings. You will store this YAML into a file that you can explore and submit.\n",
-    "1. Submitting the YAML Template: Once your YAML template is ready, you need to submit it to KServe for deployment. To do this, you will use a Python subprocess to run a shell command that submits your YAML template to KServe.\n",
+    "1. Drafting the YAML Template: Here, you craft a YAML file that outlines the Inference Service's specifics. This\n",
+    "   captures elements like the service's name, the chosen Docker image, and additional configurations. After drafting,\n",
+    "   you save this YAML to a file for inspection and later submission.\n",
+    "1. Pushing the YAML Template: With your YAML template prepped, the next step is to present it to KServe for deployment.\n",
+    "   You accomplish this by leveraging a Python subprocess to execute a shell command.\n",
     "\n",
-    "By the end of this section, you will have a running Inference Service that is ready to receive user queries and provide context for answering them using the Vector Store. This marks the completion of your journey, from transforming unstructured text data into structured vector embeddings, to creating a scalable service that can provide context based on those embeddings.\n",
+    "By the end of this section, you will have a running Inference Service that is ready to receive user queries and provide\n",
+    "context for answering them using the Vector Store. This marks the completion of your journey, from transforming\n",
+    "unstructured text data into structured vector embeddings, to creating a scalable service that can provide context based\n",
+    "on those embeddings.\n",
     "\n",
-    "Provide the name of the docker image you built at the first step in the next cell. Leave it blank to use the one we have pre-built for you:"
+    "In the upcoming cell, input the name of the Docker image you constructed in the initial phase. If you wish to utilize\n",
+    "the pre-fabricated one, simply leave the field untouched:"
    ]
   },
   {
@@ -137,8 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor_image = (input(\"Enter the name of the predictor image (default: dpoulopoulos/vectorstore:b98a87f): \")\n",
-    "                   or \"dpoulopoulos/vectorstore:b98a87f\")"
+    "predictor_image = (input(\"Enter the name of the predictor image (default: dpoulopoulos/qna-vectorstore:v0.1.0): \")\n",
+    "                   or \"dpoulopoulos/qna-vectorstore:v0.1.0\")"
    ]
   },
   {
@@ -200,9 +215,7 @@
     "            name: minio-secret\n",
     "\"\"\".format(encode_base64(os.environ[\"AWS_ACCESS_KEY_ID\"]),\n",
     "           encode_base64(os.environ[\"AWS_SECRET_ACCESS_KEY\"]),\n",
-    "           predictor_image,\n",
-    "           uri,\n",
-    "           os.environ[\"MLFLOW_S3_ENDPOINT_URL\"])\n",
+    "           predictor_image, uri, os.environ[\"MLFLOW_S3_ENDPOINT_URL\"])\n",
     "\n",
     "with open(\"vectorstore/isvc.yaml\", \"w\") as f:\n",
     "    f.write(isvc)"
@@ -229,12 +242,20 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Congratulations! You've successfully navigated through the process of logging the Chroma DB files as artifacts using MLFlow, creating a custom Docker image, and setting up an Inference Service with KServe that retrieves these artifacts to serve your Vector Store. This Inference Service forms the backbone of our question-answering application, enabling us to efficiently answer queries based on the document embeddings we generated previously.\n",
+    "Congratulations! You've successfully navigated through the process of logging the Chroma DB files as artifacts using\n",
+    "MLFlow, creating a custom Docker image, and setting up an Inference Service with KServe that retrieves these artifacts\n",
+    "to serve your Vector Store. This Inference Service forms the backbone of your question-answering application, enabling\n",
+    "you to efficiently answer queries based on the document embeddings we generated previously.\n",
     "\n",
     "From here, there are two paths you can choose:\n",
     "\n",
-    "- Testing the Vector Store Inference Service: If you'd like to test the Vector Store Inference Service that you've just created, you can proceed to our third (optional) Notebook. This Notebook provides a step-by-step guide on how to invoke the Inference Service and validate its performance.\n",
-    "- Creating the LLM Inference Service: Alternatively, if you're ready to move on to the next stage of the project, you can jump straight to our fourth Notebook. In this Notebook, we'll guide you through the process of creating an Inference Service for the Large Language Model (LLM), which will work in conjunction with the Vector Store Inference Service to provide answers to user queries."
+    "- Testing the Vector Store Inference Service: If you'd like to test the Vector Store Inference Service that you've just\n",
+    "  created, you can proceed to our third (optional) Notebook. This Notebook provides a step-by-step guide on how to\n",
+    "  invoke the Inference Service and validate its performance.\n",
+    "- Creating the LLM Inference Service: Alternatively, if you're ready to move on to the next stage of the project, you\n",
+    "  can jump straight to our fourth Notebook. In this Notebook, you create an Inference Service for the Large Language\n",
+    "  Model (LLM), which will work in conjunction with the Vector Store Inference Service to provide answers to user\n",
+    "  queries."
    ]
   }
  ],
