--- a/demos/question-answering/03.document-prediction.ipynb
+++ b/demos/question-answering/03.document-prediction.ipynb
@@ -9,13 +9,21 @@
    "source": [
     "# Invoking and Testing the Vector Store Inference Service (Optional)\n",
     "\n",
-    "Welcome to the third part of our tutorial series on building a question-answering application over a corpus of private documents using Large Language Models (LLMs). In our previous Notebooks, you've embarked on the journey of transforming unstructured text data into structured vector embeddings and deploying an Inference Service to serve the Vector Store that holds these embeddings.\n",
+    "Welcome to the third part of our tutorial series on building a question-answering application over a corpus of private\n",
+    "documents using Large Language Models (LLMs). In our previous Notebooks, you've embarked on the journey of transforming\n",
+    "unstructured text data into structured vector embeddings and deploying an Inference Service to serve the Vector Store\n",
+    "that holds these embeddings.\n",
     "\n",
-    "In this optional Notebook, you will focus on invoking the Vector Store Inference Service you've created and testing its performance. This is an essential step, as it allows us to verify the functionality of your service and observe how it performs in practice. Throughout this Notebook, we will guide you on how to construct suitable requests, communicate with the service, and interpret the responses.\n",
+    "In this optional Notebook, you focus on invoking the Vector Store Inference Service you've created and testing its\n",
+    "performance. This is an essential step, as it allows us to verify the functionality of your service and observe how it\n",
+    "performs in practice. Throughout this Notebook, you construct suitable requests, communicate with the service, and\n",
+    "interpret the responses.\n",
     "\n",
-    "By the end of this Notebook, you will gain practical insights into the workings of the Vector Store Inference Service and will be well-prepared to integrate it into a larger system, alongside the Large Language Model Inference Service that you will create in the subsequent Notebook.\n",
+    "By the end of this Notebook, you will gain practical insights into the workings of the Vector Store Inference Service\n",
+    "and will be well-prepared to integrate it into a larger system, alongside the Large Language Model Inference Service\n",
+    "that you create in the subsequent Notebook.\n",
     "\n",
-    "Let's get started! As always, let's import the libraries you'll need:"
+    "Let's get started! As always, let's import the libraries you need:"
    ]
   },
   {
@@ -28,7 +36,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
     "import requests"
    ]
   },
@@ -39,7 +46,8 @@
     "tags": []
    },
    "source": [
-    "Next, you need to construct the URL you'll hit and define the payload for the POST request you'll send. For this example. you'll be using the V1 inference protocol, which is described below:\n",
+    "Next, you need to construct the URL you use in POST request. For this example, you use the V1 inference protocol,\n",
+    "described below:\n",
     "\n",
     "| API          | Verb | Path                          | Request Payload   | Response Payload                  |\n",
     "|--------------|------|-------------------------------|-------------------|-----------------------------------|\n",
@@ -50,7 +58,7 @@
     "\n",
     "\\* Payload is optional\n",
     "\n",
-    "You want to invoke the `predict` API. So let's use a simple query to test our service:"
+    "You want to invoke the `predict` API. So let's use a simple query to test the service:"
    ]
   },
   {
@@ -83,7 +91,8 @@
    "source": [
     "data = {\n",
     "  \"instances\": [{\n",
-    "      \"question\": \"Who's Ada Lovelace?\"\n",
+    "      \"input\": \"Who's Ada Lovelace?\",\n",
+    "      \"num_docs\": 4\n",
     "  }]\n",
     "}\n",
     "\n",
@@ -113,9 +122,14 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Well done! Through this Notebook, you've successfully interacted with and tested the Vector Store Inference Service. You've learned how to construct and send requests to the service and how to interpret the responses. This hands-on experience is crucial as it provides a practical understanding of the service's operation, preparing you for real-world applications.\n",
+    "Well done! Through this Notebook, you've successfully interacted with and tested the Vector Store Inference Service.\n",
+    "You've learned how to construct and send requests to the service and how to interpret the responses. This hands-on\n",
+    "experience is crucial as it provides a practical understanding of the service's operation, preparing you for real-world\n",
+    "applications.\n",
     "\n",
-    "In the next Notebook, you will extend our question-answering system by creating an Inference Service for the Large Language Model (LLM). The LLM Inference Service will work in conjunction with the Vector Store Inference Service to provide comprehensive and accurate answers to user queries."
+    "In the next Notebook, you extend your question-answering system by creating an Inference Service for the Large Language\n",
+    "Model (LLM). The LLM Inference Service works in conjunction with the Vector Store Inference Service to provide\n",
+    "comprehensive and accurate answers to user queries."
    ]
   }
  ],
