question-answering: Extend the LLM payload
Extend the LLM request payload to include the newly supported
arguments:
- system: The system message for the LLM
- instruction: The instruction for the LLM
- max_tokens: The maximum number of tokens to generate
- top_k: The top k number of tokens to sample from
- top_p: The sum of the top token probabilities
- num_docs: The number of documents to retrieve
- temperature: The amount of creativity

Refs #57

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/05.question-answering.ipynb
+++ b/demos/question-answering/05.question-answering.ipynb
@@ -9,13 +9,20 @@
    "source": [
     "# Invoking and Testing the Large Language Model Inference Service\n",
     "\n",
-    "Welcome to the fifth and final part of our tutorial series on building a question-answering application over a corpus of private documents using Large Language Models (LLMs). In the previous Notebooks, we've covered the processes of creating vector embeddings of our documents, deploying a Vector Store Inference Service, creating a Large Language Model Inference Service, and enriching user queries with relevant context using an Inference service Transformer component.\n",
+    "Welcome to the fifth and final part of the tutorial series on building a question-answering application over a corpus of\n",
+    "private documents using Large Language Models (LLMs). In the previous Notebooks, you've covered the processes of\n",
+    "creating vector embeddings of our documents, deploying a Vector Store Inference Service, creating a Large Language Model\n",
+    "Inference Service, and enriching user queries with relevant context using an Inference service Transformer component.\n",
     "\n",
-    "In this Notebook, you focus on the crucial task of invoking and testing the LLM Inference Service you've created. This is an important step in the development process as it allows us to validate the functionality and performance of your service in a practical setting.\n",
+    "In this Notebook, you focus on the crucial task of invoking and testing the LLM Inference Service you've created. This\n",
+    "is an important step in the development process as it allows you to validate the functionality and performance of your\n",
+    "service in a practical setting.\n",
     "\n",
-    "Throughout this Notebook, we'll guide you on how to construct and send requests to the LLM Inference Service, interpret the responses, and handle potential issues that might arise. By the end of this Notebook, you will have gained practical experience in working with the LLM Inference Service, preparing you to integrate it into larger systems or applications.\n",
+    "Throughout this Notebook, you see how to construct and send requests to the LLM Inference Service, interpret the\n",
+    "responses, and handle potential issues that might arise. By the end of this Notebook, you will have gained practical\n",
+    "experience in working with the LLM Inference Service, preparing you to integrate it into larger systems or applications.\n",
     "\n",
-    "Let's get started by importing the libraries you'll need:"
+    "Let's get started by importing the libraries you need:"
    ]
   },
   {
@@ -28,7 +35,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
     "import requests"
    ]
   },
@@ -72,7 +78,14 @@
    "source": [
     "data = {\n",
     "  \"instances\": [{\n",
-    "      \"question\": \"What are modern CPUs made of?\"\n",
+    "      \"system\": \"You are an AI assistant. You will be given a task. You must generate a detailed answer.\",\n",
+    "      \"instruction\": \"Use the following pieces of context to answer the question at the end. If you don't know the answer, just say that you don't know, don't try to make up an answer.\",\n",
+    "      \"input\": \"Can a process running in a Linux Namespace communicate with another process running in another Namespace?\",\n",
+    "      \"max_tokens\": 50,\n",
+    "      \"top_k\": 100,\n",
+    "      \"top_p\": 0.4,\n",
+    "      \"num_docs\": 1,\n",
+    "      \"temperature\": 0.2\n",
     "  }]\n",
     "}\n",
     "\n",
@@ -100,7 +113,12 @@
     "tags": []
    },
    "source": [
-    "If you're executing this tutorial in an environment without access to a GPU device, the inference step might require more time than usual. Please exercise patience and allow for approximately 7-8 minutes. In the unlikely event that you encounter a time-out error, please attempt the process again."
+    "If you're executing this tutorial in an environment without access to a GPU device, the inference step might require\n",
+    "more time than usual. Please exercise patience and allow for approximately 5 minutes. In the unlikely event that you\n",
+    "encounter a time-out error, please attempt the process again.\n",
+    "\n",
+    "Furthermore, increasing the number of retrieved documents (`num_docs`) increases the latency. For testing purposes just\n",
+    "keep this number as low as possible."
    ]
   },
   {
@@ -112,11 +130,17 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "Congratulations on reaching the finish line of this comprehensive tutorial! You've successfully developed an application capable of delivering responses to user queries in a natural language format. The journey has not only enhanced your understanding but also allowed you to acquire hands-on experience in various facets of Large Language Models.\n",
+    "Congratulations on reaching the finish line of this comprehensive tutorial! You've successfully developed an application\n",
+    "capable of delivering responses to user queries in a natural language format. The journey has not only enhanced your\n",
+    "understanding but also allowed you to acquire hands-on experience in various facets of Large Language Models.\n",
     "\n",
-    "Throughout this process, you've demystified the concept of a Vector Store, created custom predictor and transformer components, and learned to log artifacts with MLflow. Moreover, all these tasks have been accomplished within the comfortable and familiar confines of your JupyterLab environment.\n",
+    "Throughout this process, you've demystified the concept of a Vector Store, created custom predictor and transformer\n",
+    "components, and learned to log artifacts with MLflow. Moreover, all these tasks have been accomplished within the\n",
+    "comfortable and familiar confines of your JupyterLab environment.\n",
     "\n",
-    "In conclusion, you've taken significant strides in your journey of mastering Large Language Models, and how to create real-world applications using the EzUA platform. Happy coding, and until our next tutorial, keep learning and experimenting!"
+    "In conclusion, you've taken significant strides in your journey of mastering Large Language Models, and how to\n",
+    "create real-world applications using the EzUA platform. Happy coding, and until the next tutorial, keep learning and\n",
+    "experimenting!"
    ]
   }
  ],
