EZAF-3174: update veriable

--- a/Model-Monitoring/RAY/whylogs-image-logging-ray-actor-approach.ipynb
+++ b/Model-Monitoring/RAY/whylogs-image-logging-ray-actor-approach.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "5miDsaTTu3Fb"
@@ -61,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -97,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -129,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -205,8 +209,8 @@
     "            print(\"whyloged image columns::\", results.get_column(\"median\").to_summary_dict())\n",
     "            print(\"whyloged image columns::\", results.get_column(\"sum\").to_summary_dict())\n",
     "            print(\"whyloged image columns::\", results.get_column(\"images\").to_summary_dict())\n",
-    "            print(\"whyloged image columns::\", list(self._result.view().get_columns()))\n",
-    "            print(\"whyloged image columns::\", self._result.view().get_column(\"image_1\").to_summary_dict())\n",
+    "            print(\"whyloged image columns::\", list(results.view().get_columns()))\n",
+    "            print(\"whyloged image columns::\", results.view().get_column(\"image_1\").to_summary_dict())\n",
     "            \n",
     "            print(\"=*=\"*50)\n",
     "            \n",
@@ -216,6 +220,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -253,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -3149,6 +3155,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
