question-answering: Restructure the directory
Include a new `dockerfiles` directory to house the source code for
any Docker image used in the tutorial.

Refs #57

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/question-answering/02.serve-vectorstore.ipynb
@@ -217,7 +217,7 @@
     "           encode_base64(os.environ[\"AWS_SECRET_ACCESS_KEY\"]),\n",
     "           predictor_image, uri, os.environ[\"MLFLOW_S3_ENDPOINT_URL\"])\n",
     "\n",
-    "with open(\"vectorstore/isvc.yaml\", \"w\") as f:\n",
+    "with open(\"vectorstore-isvc.yaml\", \"w\") as f:\n",
     "    f.write(isvc)"
    ]
   },
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "subprocess.run([\"kubectl\", \"apply\", \"-f\", \"vectorstore/isvc.yaml\"])"
+    "subprocess.run([\"kubectl\", \"apply\", \"-f\", \"vectorstore-isvc.yaml\"])"
    ]
   },
   {
