--- a/demos/question-answering/04.serve-llm.ipynb
+++ b/demos/question-answering/04.serve-llm.ipynb
@@ -153,7 +153,7 @@
     "\"\"\".format(PREDICTOR_IMAGE,\n",
     "           TRANSFORMER_IMAGE)\n",
     "\n",
-    "with open(\"llm/isvc.yaml\", \"w\") as f:\n",
+    "with open(\"llm-isvc.yaml\", \"w\") as f:\n",
     "    f.write(isvc)"
    ]
   },
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "subprocess.run([\"kubectl\", \"apply\", \"-f\", \"llm/isvc.yaml\"])"
+    "subprocess.run([\"kubectl\", \"apply\", \"-f\", \"llm-isvc.yaml\"])"
    ]
   },
   {
