Programatically fetch mlflow server uri

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -1613,7 +1613,7 @@
     "permission = #\"READ\", \"EDIT\", \"MANAGE\", \"NO_PERMISSIONS\"\n",
     "exp_id = mlflow.get_experiment_by_name(experiment_name).experiment_id\n",
     "\n",
-    "client = AuthServiceClient(\"http://mlflow.mlflow.svc.cluster.local:5000\")"
+    "client = AuthServiceClient(mlflow.get_tracking_uri())"
    ]
   },
   {
