whylogs minor fixes

--- a/Model-Monitoring/Weather Forecast.ipynb
+++ b/Model-Monitoring/Weather Forecast.ipynb
@@ -1154,7 +1154,7 @@
     "  print(\"logging batch of size {} for {}\".format(len(batch.data),batch.timestamp))\n",
     "  profile = why.log(batch.data).profile()\n",
     "  profile.set_dataset_timestamp(batch.timestamp)\n",
-    "  profile.view().write(\"batch_{}\".format(batch.timestamp), output_path=local_dir, overwrite=True)"
+    "  profile.view().write(\"batch_{}\".format(batch.timestamp), overwrite=True)"
    ]
   },
   {
