question-answering: Improve the first notebook
Improve the first notebook to follow the instructions set in the
contributing guidelines.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/01.create-vectorstore.ipynb
+++ b/demos/question-answering/01.create-vectorstore.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "# Vector Stores: Embedding and Storing Documents in a Latent Space\n",
     "\n",
-    "In this Jupyter Notebook, you will explore a foundational element of a question-answering system: the Vector Store. The Vector Store serves as the key component that allows us to efficiently retrieve relevant context from a corpus of documents based on a user's query.\n",
+    "In this Jupyter Notebook, you explore a foundational element of a question-answering system: the Vector Store. The\n",
+    "Vector Store serves as the key component that allows us to efficiently retrieve relevant context from a corpus of\n",
+    "documents based on a user's query.\n",
     "\n",
     "<figure>\n",
     "  <img src=\"images/documents.jpg\" alt=\"documents\" style=\"width:100%\">\n",
@@ -18,13 +20,22 @@
     "  </figcaption>\n",
     "</figure>\n",
     "\n",
-    "The approach you will employ involves transforming each document in the corpus into a high-dimensional numerical representation known as an \"embedding\", using a pre-trained Transformer model. This process is sometimes referred to as \"embedding\" the document in a latent space. The latent space here is a high-dimensional space where similar documents are close to each other. The position of a document in this space is determined by the content and the semantic meaning it carries.\n",
+    "The approach you employ involves transforming each document in the corpus into a high-dimensional numerical\n",
+    "representation known as an \"embedding\", using a pre-trained Transformer model. This process is sometimes referred to as\n",
+    "\"embedding\" the document in a latent space. The latent space here is a high-dimensional space where similar documents\n",
+    "are close to each other. The position of a document in this space is determined by the content and the semantic meaning\n",
+    "it carries.\n",
     "\n",
-    "Once we have these embeddings, we store them in a Vector Store. A Vector Store is an advanced AI-native database designed to hold these high-dimensional vectors and provide efficient search capabilities. This enables us to quickly identify documents in our corpus that are semantically similar to a given query, which will also be represented as a vector in the same latent space.\n",
+    "Once you have these embeddings, you store them in a Vector Store. A Vector Store is an advanced AI-native database\n",
+    "designed to hold these high-dimensional vectors and provide efficient search capabilities. This enables you to quickly\n",
+    "identify documents in your corpus that are semantically similar to a given query, which will also be represented as a\n",
+    "vector in the same latent space.\n",
     "\n",
-    "The following cells in this Notebook will guide you through the process of creating such a Vector Store. You will start by generating embeddings for each document, then you will move on to storing these embeddings in a Vector Store and finally, you will see how easy it is to to retrieve documents from the Vector Store based on a query.\n",
+    "The following cells in this Notebook guides you through the process of creating such a Vector Store. You start by\n",
+    "generating embeddings for each document, then you move on to storing these embeddings in a Vector Store and finally,\n",
+    "you see how easy it is to to retrieve documents from the Vector Store based on a query.\n",
     "\n",
-    "First, let's import the libraries you'll need:"
+    "First, let's import the libraries you need:"
    ]
   },
   {
@@ -58,14 +69,16 @@
    "source": [
     "# Load the Documents\n",
     "\n",
-    "The next cells contain a set of helper functions designed to load text documents from a specified directory. These functions are essential for preparing your data before embedding it into the high-dimensional latent space.\n",
+    "The next cells contain a set of helper functions designed to load text documents from a specified directory. These\n",
+    "functions are essential for preparing your data before embedding it into the high-dimensional latent space.\n",
     "\n",
     "The key operations performed by these functions are:\n",
     "\n",
     "- Directory Scanning: Scan the specified directory for all `.txt` files recursively.\n",
     "- Document Loading: Load the file in LangChain `Document` object, using the provided `TextLoader` object.\n",
     "\n",
-    "By running this cell, you will have a list of documents ready to be processed and embedded in the latent space. This forms our corpus, which will be used for subsequent operations in the Vector Store."
+    "By running this cell, you have a list of documents ready to be processed and embedded in the latent space. This forms\n",
+    "your corpus."
    ]
   },
   {
@@ -124,9 +137,13 @@
    "source": [
     "# Document Processing: Chunking Text for the Language Model\n",
     "\n",
-    "In this section of the Notebook, you will process the documents by splitting them into chunks. This operation is crucial when working with Large Language Models (LLMs), as these models have a maximum limit on the number of tokens (words or pieces of words) they can process at once. This limit is often referred to as the model's \"context window.\"\n",
+    "In this section of the Notebook, you process the documents by splitting them into chunks. This operation is crucial when\n",
+    "working with Large Language Models (LLMs), as these models have a maximum limit on the number of tokens (words or pieces\n",
+    "of words) they can process at once. This limit is often referred to as the model's \"context window\".\n",
     "\n",
-    "In this example, you are splitting each document into segments that are at most `500` tokens long. We're using the LangChain `RecursiveCharacterTextSplitter`, which, by default, splits each document when it encounters two consecutive newline characters, represented as `\\n\\n`. Furthermore, each segment is distinct, meaning there is no overlap between them."
+    "In this example, you split each document into segments that are at most `500` tokens long. You use the LangChain's\n",
+    "`RecursiveCharacterTextSplitter`, which, by default, splits each document when it encounters two consecutive newline\n",
+    "characters, represented as `\\n\\n`. Furthermore, each segment is distinct, meaning there is no overlap between them."
    ]
   },
   {
@@ -156,9 +173,14 @@
    "source": [
     "# Generating Embeddings & Storing them in Chroma\n",
     "\n",
-    "In this section of the Notebook, you will be using the HuggingFace's `all-MiniLM-L6-v2` model in conjunction with the Sentence Transformers framework to generate embeddings for our document chunks. Sentence Transformers is a Python framework that allows us to leverage the power of Transformer models to generate dense vector embeddings for sentences. These embeddings can capture the semantic meaning of the input text, making them ideal for tasks like semantic search, clustering, and information retrieval.\n",
+    "In this section of the Notebook, you use HuggingFace's `all-MiniLM-L6-v2` model in conjunction with the Sentence\n",
+    "Transformers framework to generate embeddings for your document chunks. Sentence Transformers is a Python framework that\n",
+    "allows you to leverage the power of Transformer models to generate dense vector embeddings for sentences. These\n",
+    "embeddings can capture the semantic meaning of the input text, making them ideal for tasks like semantic search,\n",
+    "clustering, and information retrieval.\n",
     "\n",
-    "By leveraging this framework and the Chroma database interface provided by LangChain, you can embed your documents into a latent space and subsequently store the results in a Vector Store."
+    "By leveraging this framework and the Chroma database interface provided by LangChain, you can embed your documents into\n",
+    "a latent space and subsequently store the results in a Vector Store."
    ]
   },
   {
@@ -196,7 +218,8 @@
     "tags": []
    },
    "source": [
-    "Finally, you can test the accuracy of the document retrieval mechanism by providing a simple query. Chroma will return with the four most similar documents by default."
+    "Finally, you can test the accuracy of the document retrieval mechanism by providing a simple query. Chroma will return\n",
+    "with the four most similar documents by default."
    ]
   },
   {
@@ -221,11 +244,16 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Congratulations! You have successfully traversed the journey of embedding documents into a high-dimensional latent space and storing these embeddings in a Vector Store. By accomplishing this, you've transformed unstructured text data into a structured form that can power a robust question-answering system.\n",
+    "Congratulations! You have successfully traversed the journey of embedding documents into a high-dimensional latent space\n",
+    "and storing these embeddings in a Vector Store. By accomplishing this, you've transformed unstructured text data into a\n",
+    "structured form that can power a robust question-answering system.\n",
     "\n",
-    "However, your journey doesn't end here. Now that we have our Vector Store ready, the next step is to create an Inference Service that can leverage this store to provide context to user queries. For this, you will be using KServe, a flexible, cloud-native platform for serving machine learning models.\n",
+    "However, your journey doesn't end here. Now that you have the Vector Store ready, the next step is to create an\n",
+    "Inference Service that can leverage this store to provide context to user queries. For this, you use KServe, a flexible,\n",
+    "cloud-native platform for serving Machine Learning models.\n",
     "\n",
-    "In the next Notebook, we will guide you through the process of setting up a custom Inference Service using KServe. This service will make use of our Vector Store to retrieve and rank relevant document chunks based on a user's query, providing accurate and efficient context to an LLM!"
+    "In the next Notebook, you set up a custom Inference Service using KServe. This service uses the Vector Store to retrieve\n",
+    "and rank relevant document chunks based on a user's query, providing accurate and efficient context to an LLM!"
    ]
   }
  ],
